Add payments microservice configuration

--- a/.env.template
+++ b/.env.template
@@ -5,3 +5,17 @@
 CLIENT_GATEWAY_PORT=3000
 
 
+
+
+
+PAYMENTS_MS_PORT=3003
+
+# https://dashboard.stripe.com/test/apikeys
+STRIPE_SECRET=
+
+STRIPE_SUCCESS_URL=http://localhost:3003/payments/success
+STRIPE_CANCEL_UR=http://localhost:3003/payments/cancel
+
+# https://dashboard.stripe.com/test/webhooks/we_1OrjjpLpSSVtW50ltIQEAP8z
+# Este es el signing secret del webhook
+STRIPE_ENDPOINT_SECRET=
