Update subproject commits and change auth-ms port

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,62 +21,71 @@ services:
       - PORT=3000
       - NATS_SERVERS=nats://nats-server:4222
 
-  products-ms:
-    build: ./products-ms
+  auth-ms:
+    build: ./auth-ms
     volumes:
-      - ./products-ms/src:/usr/src/app/src
+      - ./auth-ms/src:/usr/src/app/src
     command: npm run start:dev
     environment:
-      - PORT=3001
+      - PORT=3004
       - NATS_SERVERS=nats://nats-server:4222
-      - DATABASE_URL=file:./dev.db
+
+#   products-ms:
+#     build: ./products-ms
+#     volumes:
+#       - ./products-ms/src:/usr/src/app/src
+#     command: npm run start:dev
+#     environment:
+#       - PORT=3001
+#       - NATS_SERVERS=nats://nats-server:4222
+#       - DATABASE_URL=file:./dev.db
 
   
-  # Orders MS
-  orders-ms:
-    depends_on:
-      - orders-db
-    build: ./orders-ms
-    volumes:
-      - ./orders-ms/src:/usr/src/app/src
-    command: npm run start:dev
-    environment:
-      - PORT=3002
-      - DATABASE_URL=postgresql://postgres:123456@orders-db:5432/ordersdb?schema=public
-      - NATS_SERVERS=nats://nats-server:4222
+#   # Orders MS
+#   orders-ms:
+#     depends_on:
+#       - orders-db
+#     build: ./orders-ms
+#     volumes:
+#       - ./orders-ms/src:/usr/src/app/src
+#     command: npm run start:dev
+#     environment:
+#       - PORT=3002
+#       - DATABASE_URL=postgresql://postgres:123456@orders-db:5432/ordersdb?schema=public
+#       - NATS_SERVERS=nats://nats-server:4222
 
 
 
-  # Orders DB
-  orders-db:
-    container_name: orders_database
-    image: postgres:16.2
-    restart: always
-    volumes:
-      - ./orders-ms/postgres:/var/lib/postgresql/data
-    ports:
-      - 5432:5432
-    environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=123456
-      - POSTGRES_DB=ordersdb
+#   # Orders DB
+#   orders-db:
+#     container_name: orders_database
+#     image: postgres:16.2
+#     restart: always
+#     volumes:
+#       - ./orders-ms/postgres:/var/lib/postgresql/data
+#     ports:
+#       - 5432:5432
+#     environment:
+#       - POSTGRES_USER=postgres
+#       - POSTGRES_PASSWORD=123456
+#       - POSTGRES_DB=ordersdb
 
-# ======================
-# Payments Microservice
-# ======================
-  payments-ms:
-    container_name: payments-ms
-    build: ./payments-ms
-    volumes:
-      - ./payments-ms/src:/usr/src/app/src
-    command: npm run start:dev
-    ports:
-      - ${PAYMENTS_MS_PORT}:${PAYMENTS_MS_PORT}
-    environment:
-      - PORT=${PAYMENTS_MS_PORT}
-      - NATS_SERVERS=nats://nats-server:4222
-      - STRIPE_SECRET=${STRIPE_SECRET}
-      - STRIPE_SUCCESS_URL=${STRIPE_SUCCESS_URL}
-      - STRIPE_CANCEL_URL=${STRIPE_CANCEL_URL}
-      - STRIPE_ENDPOINT_SECRET=${STRIPE_ENDPOINT_SECRET}
+# # ======================
+# # Payments Microservice
+# # ======================
+#   payments-ms:
+#     container_name: payments-ms
+#     build: ./payments-ms
+#     volumes:
+#       - ./payments-ms/src:/usr/src/app/src
+#     command: npm run start:dev
+#     ports:
+#       - ${PAYMENTS_MS_PORT}:${PAYMENTS_MS_PORT}
+#     environment:
+#       - PORT=${PAYMENTS_MS_PORT}
+#       - NATS_SERVERS=nats://nats-server:4222
+#       - STRIPE_SECRET=${STRIPE_SECRET}
+#       - STRIPE_SUCCESS_URL=${STRIPE_SUCCESS_URL}
+#       - STRIPE_CANCEL_URL=${STRIPE_CANCEL_URL}
+#       - STRIPE_ENDPOINT_SECRET=${STRIPE_ENDPOINT_SECRET}
       
