Update environment variables and add database and JWT secret

--- a/.env.template
+++ b/.env.template
@@ -11,11 +11,17 @@ CLIENT_GATEWAY_PORT=3000
 PAYMENTS_MS_PORT=3003
 
 # https://dashboard.stripe.com/test/apikeys
-STRIPE_SECRET=
+STRIPE_SECRET=ABC
 
 STRIPE_SUCCESS_URL=http://localhost:3003/payments/success
 STRIPE_CANCEL_UR=http://localhost:3003/payments/cancel
 
 # https://dashboard.stripe.com/test/webhooks/we_1OrjjpLpSSVtW50ltIQEAP8z
 # Este es el signing secret del webhook
-STRIPE_ENDPOINT_SECRET=
+STRIPE_ENDPOINT_SECRET=123123
+
+
+AUTH_DATABASE_URL=mongodb+srv://******:******@auth-microservice-db.8bpm1ia.mongodb.net/AuthDB
+
+
+JWT_SECRET=Estoesunstringseguroquedebedeexistir
