Add ORDERS_DATABASE_URL to docker-compose.prod.yml

--- a/.env.template
+++ b/.env.template
@@ -25,3 +25,6 @@ AUTH_DATABASE_URL=mongodb+srv://******:******@auth-microservice-db.8bpm1ia.mongo
 
 
 JWT_SECRET=Estoesunstringseguroquedebedeexistir
+
+
+ORDERS_DATABASE_URL=postgresql://
